# doc/doc.ts
@@ -147,7 +147,7 @@ export const security: SecurityRequirementObject[] = [
 ];
 
 export const paths: PathsObject = {
-  '/login': {
+  '/auth/login': {
     post: {
       tags: ['Login'],
       security: [],
@@ -198,7 +198,7 @@ export const paths: PathsObject = {
       },
     },
   },
-  '/signup': {
+  '/auth/signup': {
     post: {
       tags: ['Signup'],
       security: [],
@@ -239,6 +239,45 @@ export const paths: PathsObject = {
         },
         409: {
           description: 'Conflict. Login already exists',
+        },
+      },
+    },
+  },
+  '/auth/refresh': {
+    post: {
+      tags: ['Refresh'],
+      security: [],
+      summary: 'Refresh',
+      description: 'Refresh accessToken',
+      requestBody: {
+        required: true,
+        content: {
+          'application/json': {
+            schema: {
+              type: 'object',
+              title: 'example',
+              properties: {
+                refreshToken: {
+                  type: 'string',
+                  minLength: 3,
+                  maxLength: 255,
+                  description: 'refreshToken',
+                },
+              },
+              required: ['refreshToken'],
+            },
+          },
+        },
+      },
+      responses: {
+        200: {
+          description: 'Successful refresh',
+        },
+        401: {
+          description: 'Unauthorized',
+        },
+        403: {
+          description: 'Forbidden',
         },
       },
     },
